fix text wrap for long ingredient/instruction text

--- a/static/recipe.css
+++ b/static/recipe.css
@@ -36,10 +36,12 @@ li {
 
 .ingredients {
     grid-column: 1;
+    overflow-wrap: anywhere;
 }
 
 .instructions {
     grid-column: 2;
+    overflow-wrap: anywhere;
 }
 
 .review {
